# University-Labs

./: .gitignore  CMakeLists.txt  README.md
lab1/: CMakeLists.txt
lab2/: main.cpp
lab4/: CMakeLists.txt  mass.cpp
lab6/: main.cpp
semester1/lab0/: TASK.md  main.cpp
semester1/lab1/: TASK.md  main.cpp
semester1/lab2/: CMakeLists.txt  TASK.md  config.hpp  main.cpp
semester1/lab3/: CMakeLists.txt  TASK.md  config.hpp  main.cpp
semester1/lab4/: TASK.md  gray.cpp
semester1/lab6/: CMakeLists.txt  TASK.md
semester2/lab1/: interactive.hpp  main.cpp
semester3-oop/lab1/graph/: TASK.md
semester3-oop/module1/1/: TASK.md  run.py
semester3-oop/module1/2/: README.md  TASK.md  run.py
semester3-oop/module1/3/: run.py
semester3/algorithms/lab1/: README.md  TASK.md
semester3/algorithms/lab2/: CMakeLists.txt  README.md  TASK.md  main.cpp  sort.hpp
semester3/algorithms/lab3/: TASK.md  functions.hpp  main.cpp
semester3/algorithms/lab4/: README.md  TASK.md  main.cpp
semester3/algorithms/lab6/: CMakeLists.txt  README.md  TASK.md  main.cpp  shifted.hpp
semester3/algorithms/lab7/: CMakeLists.txt  README.md  TASK.md  main.cpp  search.hpp
semester3/algorithms/lab8/: TASK.md  main.cpp
semester3/databases/lab1/: CMakeLists.txt  README.md  database.c  database.h  main.c
semester3/oop/lab2/: README.md  TASK.md
semester3/oop/lab3/: README.md  REPORT.md  requirements.txt  run.py
semester3/oop/module1/: TASK.md
semester3/probability/chi-square/: README.md
semester4/algorithms/lab1/: CMakeLists.txt  README.md  TASK.md
semester4/algorithms/lab3/: TASK.md  (+2 more)
(+256 files in other folders)
